--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>project</title>
 </head>
 <body>
-
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
